# Emscripten-sketches

./: README.md
ARLOG/: build.sh  index.html  log  log.c  log.h  log.js  log.wasm  main.cpp  main.js
SDL2_key_example/: build.sh  page.html  page.js  page.wasm  pre.js  sdl2_key.c
SDL2_text_example/: build.sh  page.js  page.wasm  pre.js  sdl2_text.c
SDL2_ttf_example/: build.sh  sdl2_ttf.html  sdl2_ttf.js  sdl2_ttf.wasm
fetch_example/: build.sh  main.c  main.js  main.wasm  terminal.html
fmt/: .gitignore  CMakeLists.txt  Readme.md  bootstrap.json
gl_textures/: build.sh  gl_textures.cpp  gl_textures.html  gl_textures.js  gl_textures.wasm
glfw_draw_cube/: build.sh  glfw_draw.cpp  glfw_example.html  glfw_example.js  glfw_example.wasm
grayscale-simd/: build.sh  emscripten-gray.cpp  gray.cpp  gray.h  gray.html  gray.js  gray.wasm  main.js  memory_simd_sse_threads.cpp  readme.md  videoLuma.cpp
hello_world_class/: build.sh  hello_world.cpp  hello_world.js  hello_world.wasm  main.js
hello_world_sdl/: build.sh  hello_world_sdl  hello_world_sdl.cpp  hello_world_sdl.html  hello_world_sdl.js  hello_world_sdl.wasm
hello_world_worker/: build.sh  main.html  worker.js  worker.wasm
libwebp-wasm/: a.out.js  a.out.wasm  build.sh  encode.html  encoder.js  simple.html  webp.c  webp_encoder.js  webp_encoder.wasm
load_jpeg/: build.sh  index.html  load_jpeg.cpp  main.js  main.wasm
memory_views/: build.sh  main.js  memory_views.cpp  memory_views.js  (+1 more)
stb_image_example/: CMakeLists.txt  build.sh  load.html  simple_stb_example.cpp  stb_example.js  stb_example.wasm
(+68 files in other folders)
